--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Zeige Symbole und Text">
 <!ENTITY Ctr_nav_txt_ico3	"Zeige nur Text">
 <!ENTITY Ctr_nav_txt_exp	"Experimentelle Attribute:">
+<!ENTITY Ctr_iat_notf_vt	"Nicht auf vertikalen Leisten">
 <!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Popupmenüs' (Lesezeichen, Chronik etc.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: verstecke Schaltfläche für 'Normalgröße'">
 <!ENTITY Ctr_pmhidelabels	"Verstecke Text unter 'Menüschaltflächen'-Elementen">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Neuer Tab (hover)">
 <!ENTITY Ctr_bold			"Fett">
 <!ENTITY Ctr_italic			"Kursiv">
+<!ENTITY Ctr_notabhov		"Aktivierte Einstellungen ersetzen 'Hover-Einstellungen'">
 
 <!ENTITY Ctr_urlbar			"Adressleiste">
 <!ENTITY Ctr_starinurl		"'Lesezeichen-Stern' (Firefox neustarten)">
