--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Symbole a tekst pokazaś">
 <!ENTITY Ctr_nav_txt_ico3	"Jano tekst pokazaś">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Kompaktne pólowe menije (cytańske znamjenja, historija atd.)">
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_pmhidelabels	"Pólowy meni: Tekst tłocaškow schowaś">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Nowy rejtark (hover)">
 <!ENTITY Ctr_bold			"Tucny">
 <!ENTITY Ctr_italic			"Kursiwny">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Gwězdowy tłocašk w adresowej rědce (startujśo Firefox znowego!)">
