--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Εμφάνιση εικονιδίων και κειμένου">
 <!ENTITY Ctr_nav_txt_ico3	"Εμφάνιση μόνο κειμένου">
 <!ENTITY Ctr_nav_txt_exp	"Πειραματικά χαρακτηριστικά:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Μενού πίνακα: συνεπτυγμένη προβολή (σελιδοδείκτες, ιστορικό κλπ.)">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Νέα καρτέλα (κατάδειξη)">
 <!ENTITY Ctr_bold			"Έντονη γραφή">
 <!ENTITY Ctr_italic			"Πλάγια γραφή">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Γραμμή τοποθεσιών">
 <!ENTITY Ctr_starinurl		"Κουμπί-αστέρι στη γραμμή τοποθεσιών (επανεκκινήστε τον Firefox!)">
