--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Show icons and text">
 <!ENTITY Ctr_nav_txt_ico3	"Show text only">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Panel menus: compact view (bookmarks, history etc.)">
 <!ENTITY Ctr_hidezoomres	"Zoom controls on toolbar: hide zoom-reset button">
 <!ENTITY Ctr_pmhidelabels	"Panel menu popup: hide button labels">
@@ -137,14 +138,15 @@
 <!ENTITY Ctr_ctext			"Text">
 <!ENTITY Ctr_ctextsh		"Text shadow">
 <!ENTITY Ctr_tabnor			"Tab (default)">
-<!ENTITY Ctr_tabhov			"Tab (hover)">
-<!ENTITY Ctr_tabact			"Tab (active)">
+<!ENTITY Ctr_tabhov			"Tab (hovered)">
+<!ENTITY Ctr_tabact			"Tab (selected)">
 <!ENTITY Ctr_tabpen			"Tab (unloaded)">
 <!ENTITY Ctr_tabunr			"Tab (unread)">
 <!ENTITY Ctr_ntabnor		"New tab (default)">
-<!ENTITY Ctr_ntabhov		"New tab (hover)">
+<!ENTITY Ctr_ntabhov		"New tab (hovered)">
 <!ENTITY Ctr_bold			"Bold">
 <!ENTITY Ctr_italic			"Italic">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Star-button (restart Firefox!)">
