--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Mostrar iconos y texto">
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Menús de panel: vista compacta (marcadores, historial, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_pmhidelabels	"Menú de panel emergente: ocultar etiquetas de los botones">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Nueva pestaña (señalada)">
 <!ENTITY Ctr_bold			"Negrita">
 <!ENTITY Ctr_italic			"Itálica">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Botón estrella de marcador en la barra de URL (¡requiere reiniciar Firefox!)">
