--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Utilizza icone e testo">
 <!ENTITY Ctr_nav_txt_ico3	"Utilizza solo testo">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Pannello menu unificato (Segnalibri, Cronologia, ecc..)">
 <!ENTITY Ctr_hidezoomres	"Nascondi il pulsante per ripristinare il livello di zoom dalla barra degli strumenti">
 <!ENTITY Ctr_pmhidelabels	"Mostra solo icone nel pannello menu">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Nuova scheda al passaggio del mouse">
 <!ENTITY Ctr_bold			"Grassetto">
 <!ENTITY Ctr_italic			"Corsivo">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Stella nella barra degli indirizzi (riavviare Firefox)">
