--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_nav_txt_ico2	"Zobrazit ikony a text">
 <!ENTITY Ctr_nav_txt_ico3	"Zobrazit pouze text">
 <!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
+<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
 <!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie atd.)">
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_pmhidelabels	"Tlačítko nabídky: skrýt texty u ikon">
@@ -145,6 +146,7 @@
 <!ENTITY Ctr_ntabhov		"Nový panel (najetí myši)">
 <!ENTITY Ctr_bold			"Tučný">
 <!ENTITY Ctr_italic			"Kurzíva">
+<!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Tlačítko hvězdičky v adresním řádku (restartujte Firefox!)">
